--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>User</title>
 </head>
 <body>
 
-<p th:text="${'Hello ' + user.fullName}"></p>
+<p th:text="${'Hello ' + user.username}"></p>
+
 
 </body>
 </html>
